# Prog_Laba3

./: CMakeLists.txt  README.md  integral.h  main.c  main.c.autosave  menu.c  menu.h  menu.h.autosave
